# Playwright_Scraping

./: .gitignore  Data_analysis.ipynb  Readme.md  pyproject.toml  resultados.xlsx
